# cy-ros-pkg

thermal_image_proc/: CMakeLists.txt
thermal_image_proc/src/: thermal_image_proc.cpp
